--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
 SMTP_USER=project.sentiment.analysis.emd@gmail.com
-SMTP_PASS=zhhm kcdi brsv mltg
+SMTP_PASS=your passkey
 
 #OWNER_EMAIL=project.sentiment.analysis.emd@gmail.com
 OWNER_EMAILS=project.sentiment.analysis.emd@gmail.com,thebharathraj29@gmail.com
